--- a/JProxifier2/src/main/java/com/mycompany/jproxifier2/MainWindow1.form
+++ b/JProxifier2/src/main/java/com/mycompany/jproxifier2/MainWindow1.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JMenuBar" name="jMenuBar2">
 
@@ -84,7 +84,7 @@
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jSlider1" min="-2" pref="67" max="-2" attributes="0"/>
+              <Component id="jSliderButton" min="-2" pref="67" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -100,7 +100,7 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="15" max="32767" attributes="0"/>
-                      <Component id="jSlider1" min="-2" pref="23" max="-2" attributes="0"/>
+                      <Component id="jSliderButton" min="-2" pref="23" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -138,7 +138,7 @@
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jProgressBar1" alignment="1" min="-2" pref="134" max="-2" attributes="0"/>
+                                  <Component id="jProgressBarDownload" alignment="1" min="-2" pref="134" max="-2" attributes="0"/>
                                   <Component id="jTextField1" alignment="1" min="-2" pref="134" max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -157,7 +157,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" pref="174" max="32767" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jProgressBar1" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="jProgressBarDownload" min="-2" pref="25" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -236,7 +236,7 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JProgressBar" name="jProgressBar1">
+            <Component class="javax.swing.JProgressBar" name="jProgressBarDownload">
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField1">
               <Properties>
@@ -516,7 +516,7 @@
         </Container>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JSlider" name="jSlider1">
+    <Component class="javax.swing.JSlider" name="jSliderButton">
       <Properties>
         <Property name="maximum" type="int" value="1"/>
       </Properties>
