--- a/JProxifier/src/main/java/com/mycompany/jproxifier2/MainWindow1.form
+++ b/JProxifier/src/main/java/com/mycompany/jproxifier2/MainWindow1.form
@@ -441,7 +441,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
               <SubComponents>
-                <Component class="javax.swing.JTable" name="jTable2">
+                <Component class="javax.swing.JTable" name="jTablePlugins">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="9" rowCount="4">
